// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot (default capability: the gate) 1`] = `
{
  "lines": 667,
  "sha256": "12ae7087e2ea377798ffefe7968b79d87d9ca5ce7c606e321f9204535381974c",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot new_project (project-free: the shell) 1`] = `
{
  "lines": 667,
  "sha256": "336ad61feaa93762dcc5176fc7a1ad6501cb467be5460b53d1facb888a8f43eb",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot rfi (the shell + the job-picker sheet) 1`] = `
{
  "lines": 667,
  "sha256": "d7c4d0f8fb53eb43bca143adf9dd62231ed8bc5c0fcfc3496fc7af24cd3e7ff0",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events (log, event, evidence, notice-period, notice-form sheets) 1`] = `
{
  "lines": 702,
  "sha256": "97458924873cc690ab2406a1656af4f0e27ecf0505f110dbb64ae0e77d499356",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events: a logged delay, its event sheet and the notice form 1`] = `
{
  "lines": 818,
  "sha256": "884e44f79a78e5e0bb7315ff1204bfdbda2bbe2848b314f6e5fa446a6fe53efd",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) project-detail (the hub with the cost and revision sheets) 1`] = `
{
  "lines": 1611,
  "sha256": "623f3720de87f0ea73aa47cad064d4124d665e0d92d27527a571c522a4b7ee9f",
}
`;
